[package]
name = "prometheus-metric-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
darling = "0.20.3"
itertools = "0.12.0"
proc-macro2 = "1.0.70"
prometheus_exporter_base = "1.4.0"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full", "derive", "extra-traits"] }


[lib]
proc-macro = true
